--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: Remove the former PDF preview
       run: |
-        gh release delete ${{ env.tag_preview }} --cleanup-tag --yes
+        gh release list --exclude-drafts --json 'isPrerelease,tagName' --jq '.[] | select(.isPrerelease == true and .tagName == "'${{ env.tag_preview }}'") | .tagName' | xargs -n 1 echo gh release delete --cleanup-tag
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
