--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -43,11 +43,11 @@ jobs:
         test -f ${{ env.doc_name }}-draft.pdf
         test -f ${{ env.doc_name }}.bbl
 
-    - name: Remove the former PDF preview
+    - name: Remove the former PDF preview (if any)
       run: |
-        gh release list --exclude-drafts --json 'isPrerelease,tagName'
-        gh release list --exclude-drafts --json 'isPrerelease,tagName' --jq '.[] | select(.isPrerelease == true and .tagName == "${{ env.tag_preview }}") | .tagName'
-        gh release list --exclude-drafts --json 'isPrerelease,tagName' --jq '.[] | select(.isPrerelease == true and .tagName == "${{ env.tag_preview }}") | .tagName' | xargs -n 1 gh release delete --cleanup-tag
+        gh release list --exclude-drafts --json 'isPrerelease,tagName' \
+           --jq '.[] | select(.isPrerelease == true and .tagName == "${{ env.tag_preview }}") | .tagName' \
+        | xargs -n 1 gh release delete --cleanup-tag
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
